--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
         }(window, document);
     </script>
-    <link href="assets/Logo raw.jpg" rel="shortcut icon" type="image/x-icon" />
-    <link href="assets/Logo raw.jpg" rel="apple-touch-icon" />
+    <link href="assets/logo.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="assets/logo.png" rel="apple-touch-icon" />
     <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-52115242-25"></script>
     <script type="text/javascript">
         window.dataLayer = window.dataLayer || [];
@@ -82,7 +82,7 @@
                                     target="_blank" class="text-white">Webflow</a></div>
                         </div>
                     </nav>
-                    <div class="menu-button w-nav-button"><img height="50px" src="assets/Logo raw.jpg" alt="" /></div>
+                    <div class="menu-button w-nav-button"><img height="50px" src="assets/logo.png" alt="" /></div>
 
                 </div>
             </div>
@@ -97,9 +97,7 @@
                     electronics accessories for global markets.</h6>
                 <h1>Company slogan</h1>
                 <p></p> <!-- slogan 下面的字 -->
-                <a href="/shop" class="button w-inline-block">
-                    <div>Shop All</div>
-                </a>
+
             </div>
         </div>
         <div class="section-row-image-wrapper"><img
@@ -228,14 +226,8 @@
 
             </div>
             <div class="footer-bottom-row">
-                <div class="social-links"><a href="https://twitter.com/" class="social-link w-inline-block"><img
-                            src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea6291670b5056740488873_twitter.svg"
-                            alt="" /></a>
-                    <a href="https://instagram.com/" class="social-link w-inline-block"><img
-                            src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea629168ad6b608309c6bab_instagram.svg"
-                            alt="" /></a><a href="https://facebook.com/" class="social-link w-inline-block"><img
-                            src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea62916a5a8d24572e1c986_facebook.svg"
-                            alt="" /></a>
+                <div class="social-links"><a href="https://twitter.com/" class="social-link w-inline-block"
+                        style="height: 30px; width: 30px;"><img src="assets/linkedin icon.png" alt="" /></a>
                 </div>
 
             </div>
