--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <div class="container align-center">
                 <h6 class="text-small-caps subtitle">toys, computer, and
                     electronics accessories for global markets.</h6>
-                <h1>Company slogan</h1>
-                <p></p> <!-- slogan 下面的字 -->
+                <h1>Turn your computer mouse into a real mouse</h1>
+                <p>For more information of our products and for our Products Catalog use the Contact Box below.</p> <!-- slogan 下面的字 -->
 
             </div>
         </div>
@@ -104,7 +104,7 @@
                 src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a16b6a15e74865ec20b_portrait-02.jpg"
                 alt="" /></div> <!-- 第一張圖片首頁左邊的圖片 -->
     </div>
-    <div class="section">
+    <!-- <div class="section">
         <div class="main-container">
             <div class="title-with-button">
                 <h2 class="title-with-button-heading">Product</h2>
@@ -142,7 +142,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- <div class="section hero-section"><img src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a160047df1c521980c2_landscape-hero-1.jpg" alt="" sizes="100vw" srcset="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a160047df1c521980c2_landscape-hero-1-p-500.jpeg 500w, https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a160047df1c521980c2_landscape-hero-1.jpg 1920w"
             class="hero-image" />
@@ -210,9 +210,14 @@
         <div class="main-container">
             <div class="footer-grid">
                 <div class="footer-left"><a href="#" class="footer-logo w-inline-block">
-                        <img src="assets/Kastilia text white.png" height="50" alt="" /></a>
+                        </a>
                     <div class="container-small">
-                        <p>Founder & CEO - Janne Linna</p>
+                        <H1>Kastilia Ltd.</H1>
+                        <p>Company No. 3129509-1</p>
+
+
+                        <img src="assets/logo.png">
+                        <p>CEO Janne Linna <br>janne.linna@kastilia.com</p>
                         <div class="form-block w-form">
                             <div class="form-success w-form-done">
                                 <div>Thank you! Your submission has been received!</div>
@@ -226,7 +231,7 @@
 
             </div>
             <div class="footer-bottom-row">
-                <div class="social-links"><a href="https://twitter.com/" class="social-link w-inline-block"
+                <div class="social-links"><a href="www.linkedin.com/in/kastilia-ltd-5851242a9" class="social-link w-inline-block"
                         style="height: 30px; width: 30px;"><img src="assets/linkedin icon.png" alt="" /></a>
                 </div>
 
