--- a/index.html
+++ b/index.html
@@ -104,17 +104,18 @@
                 src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a16b6a15e74865ec20b_portrait-02.jpg"
                 alt="" /></div> <!-- 第一張圖片首頁左邊的圖片 -->
     </div>
-    <!-- <div class="section">
+    <div class="section">
         <div class="main-container">
             <div class="title-with-button">
                 <h2 class="title-with-button-heading">Product</h2>
-                <a href="/shop" class="button w-inline-block">
+                <!-- <a href="/shop" class="button w-inline-block">
                     <div>Shop All</div>
-                </a>
+                </a> -->
             </div>
 
-
-            <div class="w-dyn-list">
+            <p>For more information of our products and for our Products Catalog use
+                the Contact Box below. => Text under PRODUCTS topic.</p>
+            <!-- <div class="w-dyn-list">
                 <div data-w-id="aa6fa100-cf0d-bd99-e6eb-9a2df56f1f0a" role="list"
                     class="product-grid-thirds w-dyn-items">
                     <div role="listitem" class="w-dyn-item"><a href="#" class="product-link w-inline-block"><img
@@ -136,13 +137,13 @@
                                     class="product-price w-dyn-bind-empty"></div>
                             </div>
                         </a></div>
-                </div>
+                </div> -->
 
 
 
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!-- <div class="section hero-section"><img src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a160047df1c521980c2_landscape-hero-1.jpg" alt="" sizes="100vw" srcset="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a160047df1c521980c2_landscape-hero-1-p-500.jpeg 500w, https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a160047df1c521980c2_landscape-hero-1.jpg 1920w"
             class="hero-image" />
@@ -214,9 +215,12 @@
                     <div class="container-small">
                         <H1>Kastilia Ltd.</H1>
                         <p>Company No. 3129509-1</p>
+                        <p>Company Address: Virusmäentie 16
+                            20300 Turku
+                            Finland</p>
 
 
-                        <img src="assets/logo.png">
+                        <img src="assets/ceo.jpg">
                         <p>CEO Janne Linna <br>janne.linna@kastilia.com</p>
                         <div class="form-block w-form">
                             <div class="form-success w-form-done">
