--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
 
             <p>For more information of our products and for our Products Catalog use
-                the Contact Box below. => Text under PRODUCTS topic.</p>
+                the Contact Box below.</p>
             <!-- <div class="w-dyn-list">
                 <div data-w-id="aa6fa100-cf0d-bd99-e6eb-9a2df56f1f0a" role="list"
                     class="product-grid-thirds w-dyn-items">
