--- a/index.html
+++ b/index.html
@@ -57,31 +57,12 @@
         <div class="main-container">
             <div data-collapse="all" data-animation="over-left" data-duration="400" data-easing="ease"
                 data-easing2="ease" role="banner" class="navbar w-nav">
-                <div class="navbar-grid"><a href="Kastilia.html"
+                <div class="navbar-grid"><a href="#"
                         id="w-node-_58c24694-e930-55e2-38f1-217756ef1949-56ef1945" aria-current="page"
                         class="navbar-link w-nav-brand w--current"><img height="50px" src="assets/Kastilia text.png"
                             alt="" /></a>
                     <!-- Toybox正中間上方首頁的圖片 -->
-                    <nav role="navigation" class="nav-menu w-nav-menu">
-                        <div class="nav-menu-content">
-                            <div>
-                                <div class="nav-links-large-grid"><a href="/shop"
-                                        class="nav-link-large w-nav-link">Shop</a><a href="/about-us"
-                                        class="nav-link-large w-nav-link">About</a><a href="/faq"
-                                        class="nav-link-large w-nav-link">FAQ</a><a href="/news"
-                                        class="nav-link-large w-nav-link">News</a>
-                                    <a href="/contact" class="nav-link-large w-nav-link">Contact</a>
-                                </div>
-                                <div class="menu-divider"></div>
-                                <div class="nav-links-large-grid"><a href="/template/licensing"
-                                        class="link-small w-nav-link">Licenses</a><a href="/template/style-guide"
-                                        class="link-small w-nav-link">Style Guide</a><a href="/template/changelog"
-                                        class="link-small w-nav-link">Changelog</a></div>
-                            </div>
-                            <div class="text-extra-small">Ⓒ Copyright • Powered by <a href="https://webflow.com"
-                                    target="_blank" class="text-white">Webflow</a></div>
-                        </div>
-                    </nav>
+                    
                     <div class="menu-button w-nav-button"><img height="50px" src="assets/logo.png" alt="" /></div>
 
                 </div>
@@ -104,7 +85,7 @@
                 src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea27a16b6a15e74865ec20b_portrait-02.jpg"
                 alt="" /></div> <!-- 第一張圖片首頁左邊的圖片 -->
     </div>
-    <div class="section">
+    <div class="section" style="background-color: aliceblue;">
         <div class="main-container">
             <div class="title-with-button">
                 <h2 class="title-with-button-heading">Product</h2>
@@ -167,7 +148,7 @@
     </div>
     </div>
 
-    <div class="section header bg-primary-3">
+    <!-- <div class="section header bg-primary-3">
         <div class="main-container text-center">
             <h6 class="text-small-caps subtitle">Contact</h6>
             <h1>We're here to help</h1>
@@ -175,10 +156,17 @@
                     href="mailto:support@toybox.io?subject=Website%20enquiry">info@kastilia.com</a></div>
         </div><img src="https://assets.website-files.com/5ea25d8c387c007ac26facfd/5ea66acc0881540383bce1dc_wave.svg"
             alt="" class="wave-divider">
-    </div>
+    </div> -->
 
     <div class="section article-section">
         <div class="main-container">
+            <div class="main-container text-center">
+                <h6 class="text-small-caps subtitle">Contact</h6>
+                <h1>We're here to help</h1>
+                <div>Any other questions? reach out at <a
+                        href="mailto:support@toybox.io?subject=Website%20enquiry">info@kastilia.com</a></div>
+            </div>
+            <div style="height: 50px;"></div>
             <div class="container-large align-center">
                 <div class="form-block w-form">
                     <form id="wf-form-Contact-Form" name="wf-form-Contact-Form" data-name="Contact Form" method="get"
@@ -222,6 +210,9 @@
 
                         <img src="assets/ceo.jpg">
                         <p>CEO Janne Linna <br>janne.linna@kastilia.com</p>
+                        <div class="social-links"><a href="www.linkedin.com/in/kastilia-ltd-5851242a9" class="social-link w-inline-block"
+                            style="height: 30px; width: 30px;"><img src="assets/linkedin icon.png" alt="" /></a>
+                    </div>
                         <div class="form-block w-form">
                             <div class="form-success w-form-done">
                                 <div>Thank you! Your submission has been received!</div>
@@ -235,9 +226,7 @@
 
             </div>
             <div class="footer-bottom-row">
-                <div class="social-links"><a href="www.linkedin.com/in/kastilia-ltd-5851242a9" class="social-link w-inline-block"
-                        style="height: 30px; width: 30px;"><img src="assets/linkedin icon.png" alt="" /></a>
-                </div>
+                
 
             </div>
         </div>
