--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         id="w-node-_58c24694-e930-55e2-38f1-217756ef1949-56ef1945" aria-current="page"
                         class="navbar-link w-nav-brand w--current"><img height="50px" src="assets/Kastilia text.png"
                             alt="" /></a>
-                    <!-- Toybox正中間上方首頁的圖片 -->
+                    <!-- Toybox正 -->
                     
                     <div class="menu-button w-nav-button"><img height="50px" src="assets/logo.png" alt="" /></div>
 
