--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 
                         <img src="assets/ceo.jpg" style="height: 140px;">
-                        <p>CEO Janne Linna <br>janne.linna@kastilia.com</p>
+                        <p>CEO Janne Linna <br>info@kastilia.com</p>
                         <div class="social-links"><a href="www.linkedin.com/in/kastilia-ltd-5851242a9" class="social-link w-inline-block"
                             style="height: 30px; width: 30px;"><img src="assets/linkedin icon.png" alt="" /></a>
                     </div>
